# voxel

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  run.sh
lib/noise/: BUILD  perlin_noise.h
res/shaders/: block.glsl  chunk.glsl  composite.glsl  final.glsl  shadow_map.glsl  ssao.glsl  ssao_blur.glsl  water.glsl
voxel/: voxel.cpp
voxel/entity/: block.hpp  chunk.cpp  chunk.hpp  player.cpp  player.hpp  sun.hpp  water.hpp
voxel/gfx/: composite.hpp  framebuffer.hpp  gbuffer.cpp  gbuffer.hpp
voxel/util/: aabb.hpp  biome.hpp  worldgen.hpp
